z-index fix and content changes (following Adam) for jmenus

--- a/public/stylesheets/superfish.css
+++ b/public/stylesheets/superfish.css
@@ -22,6 +22,7 @@
 .sf-menu li {
 	float:			left;
 	position:		relative;
+	z-index:	150;
 }
 .sf-menu a {
 	display:		block;
